@@ -1,6 +1,0 @@
-DESTDIR = $${DESTDIR}/ming/
-
-RCC_DIR     = $$PWD/../buildd-$$BT/temp-ming/rcc
-UI_DIR      = $$PWD/../buildd-$$BT/temp-ming/ui
-MOC_DIR     = $$PWD/../buildd-$$BT/temp-ming/moc
-OBJECTS_DIR = $$PWD/../buildd-$$BT/temp-ming/obj
