@@ -1,8 +1,2 @@
 #Doesn't work shit____
 #TEMPLATE = vclib
-DESTDIR = $${DESTDIR}/msvc/
-
-RCC_DIR     = $$PWD/../buildd-$$BT/temp-msvc/rcc
-UI_DIR      = $$PWD/../buildd-$$BT/temp-msvc/ui
-MOC_DIR     = $$PWD/../buildd-$$BT/temp-msvc/moc
-OBJECTS_DIR = $$PWD/../buildd-$$BT/temp-msvc/obj
