@@ -1,5 +1,9 @@
-PROJECT_VERSION_MAJOR = 0
-PROJECT_VERSION_MINOR = 3
-PROJECT_VERSION_BUGFIX = 0
-DESTDIR=
-DEPDIR=/Users/dmp/buildd/deploy.webitup.org/client/Darwin
+ROXEE_PROJECT_NAME = RoxeePlayer
+ROXEE_PROJECT_VERSION_MAJOR = 0
+ROXEE_PROJECT_VERSION_MINOR = 3
+ROXEE_PROJECT_VERSION_BUGFIX = 1
+ROXEE_DESTDIR =
+ADDITIONAL_DEPENDENCIES_DIR =
+ROXEE_DEPENDENCIES_DIR = /Users/dmp/buildd/deploy.webitup.org/client/Darwin
+ROXEE_LINK_TYPE = dynamic
+#ROXEE_LINK_TYPE = static
