@@ -1,5 +1,8 @@
-PROJECT_VERSION_MAJOR = {PUKE-VERSION-MAJOR}
-PROJECT_VERSION_MINOR = {PUKE-VERSION-MINOR}
-PROJECT_VERSION_BUGFIX = {PUKE-VERSION-BUGFIX}
-DESTDIR={PUKE-OUTPUT-DIR}
-DEPDIR += {PUKE-DEP-DIR}
+ROXEE_PROJECT_NAME = RoxeePlayer
+ROXEE_PROJECT_VERSION_MAJOR = {PUKE-VERSION-MAJOR}
+ROXEE_PROJECT_VERSION_MINOR = {PUKE-VERSION-MINOR}
+ROXEE_PROJECT_VERSION_BUGFIX = {PUKE-VERSION-BUGFIX}
+ROXEE_DESTDIR = {PUKE-OUTPUT-DIR}
+ADDITIONAL_DEPENDENCIES_DIR =
+ROXEE_DEPENDENCIES_DIR = {PUKE-DEP-DIR}
+ROXEE_LINK_TYPE = static #dynamic
